MAT-19059 Bumper guava 27.1-jre -> 30.1-jre
* Erstatter Guavas deprekerte Objects.hashCode() med JDK7 Objects.hash().
* Erstatter Guavas deprekerte Objects.equal() med JDK7 Objects.equals().
* Erstatter Guavas Preconditions.checkNotNull() med JDK7 Objects.requireNonNull().
* Erstattet ImmutableList med JDK11 factory metode.
* Erstattet ImmutableMap med JDK11 factory metode.